envoy.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: main_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/orders/"
                route:
                  prefix_rewrite: "/"
                  cluster: order_service
              - match:
                  prefix: "/payment/"
                route:
                  prefix_rewrite: "/"
                  cluster: payment_service
              - match:
                  prefix: "/stock/"
                route:
                  prefix_rewrite: "/"
                  cluster: stock_service
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: order_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: RANDOM
    load_assignment:
      cluster_name: order_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: order-service
                port_value: 5000
  - name: payment_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: RANDOM
    load_assignment:
      cluster_name: payment_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: payment-service
                port_value: 5000
  - name: stock_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: RANDOM
    load_assignment:
      cluster_name: stock_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: stock-service
                port_value: 5000
